<resources>
    <string name="app_name">Android School </string>
    <string name="hello_eltex">Hello Eltex!</string>
    <string name="avatar">avatar</string>
    <string name="menu">menu</string>
    <string name="likes">likes</string>
    <string name="share">share</string>
    <string name="event">event</string>
    <string name="event_online">online</string>
    <string name="event_offline">offline</string>
    <string name="not_implemented">Not implemented</string>
    <string name="share_text">Author: %s, content: %s</string>
    <string name="save_post">Save post</string>
    <string name="new_post_title">New post</string>
    <string name="content">content</string>
    <string name="new_post_description">New post</string>
    <string name="post_empty_error">Content must not be blank</string>
    <string name="me">Me</string>
    <string name="delete_post">delete post</string>
    <string name="edit_post">edit post</string>
    <string name="edit_post_title">edit post</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="posts_description">Posts</string>
    <string name="event_description">Events</string>
    <string name="users_description">Users</string>
    <string name="network_error">network error</string>
    <string name="unknown_error">unknown error</string>
    <string name="retry">retry</string>
    <string name="remove">Remove</string>
    <string name="take_photo_description">take photo</string>
    <string name="pick_file_description">pick file</string>
</resources>