<?xml version="1.0" encoding="utf-8"?>

<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="12dp"
        android:paddingEnd="4dp"
        tools:context=".activity.MainActivity">

        <ImageView
            android:id="@+id/avatar"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/avatar"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/avatar_background"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/initial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="?colorOnPrimary"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/avatar"
            app:layout_constraintEnd_toEndOf="@+id/avatar"
            app:layout_constraintStart_toStartOf="@+id/avatar"
            app:layout_constraintTop_toTopOf="@+id/avatar"
            tools:text="L" />

        <TextView
            android:id="@+id/author"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/common_spacing"
            android:ellipsize="end"
            android:maxLines="1"
            app:layout_constraintBottom_toTopOf="@id/author0fPublished"
            app:layout_constraintEnd_toStartOf="@id/menu"
            app:layout_constraintStart_toEndOf="@id/avatar"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Lydia Westervelt" />

        <Space
            android:id="@+id/author0fPublished"
            android:layout_width="wrap_content"
            android:layout_height="4dp"
            app:layout_constraintBottom_toTopOf="@id/published"
            app:layout_constraintStart_toEndOf="@id/avatar"
            app:layout_constraintTop_toBottomOf="@id/author" />

        <TextView
            android:id="@+id/published"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/common_spacing"
            app:layout_constraintEnd_toEndOf="@id/menu"
            app:layout_constraintEnd_toStartOf="@id/menu"
            app:layout_constraintStart_toEndOf="@id/avatar"
            app:layout_constraintTop_toBottomOf="@id/author0fPublished"
            tools:text="11.05.22 11:21" />

        <ImageView
            android:id="@+id/menu"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/menu"
            android:padding="@dimen/small_spacing"
            android:src="@drawable/baseline_more_vert_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/headerBarrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:barrierMargin="12dp"
            app:constraint_referenced_ids="avatar,menu,published" />


        <TextView
            android:id="@+id/status"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_spacing"
            android:layout_marginEnd="@dimen/common_spacing"
            android:paddingStart="@dimen/common_spacing"
            app:layout_constraintBottom_toTopOf="@id/timeStatus"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/headerBarrier"
            tools:text="Offline" />

        <TextView
            android:id="@+id/timeStatus"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/common_spacing"
            android:paddingStart="@dimen/common_spacing"
            android:paddingBottom="@dimen/common_spacing"
            app:layout_constraintBottom_toTopOf="@id/attachmentPhoto"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/status"
            tools:text="16.05.22 12:00" />

        <ImageView
            android:id="@+id/attachmentPhoto"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/timeStatus"
            tools:srcCompat="@tools:sample/avatars[11]"
            tools:visibility="visible" />


        <TextView
            android:id="@+id/content"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/big_spacing"
            android:layout_marginEnd="@dimen/common_spacing"
            android:layout_marginBottom="@dimen/big_spacing"
            android:letterSpacing="0.02"
            android:paddingStart="@dimen/common_spacing"
            app:layout_constraintBottom_toTopOf="@id/link"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/attachmentPhoto"
            tools:text="Приглашаю провести уютный вечер за увлекательными играми! У нас есть несколько вариантов настолок, подходящих для любой компании." />

        <TextView
            android:id="@+id/link"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/big_spacing"
            android:layout_marginEnd="@dimen/common_spacing"
            android:autoLink="all"
            android:ellipsize="end"
            android:letterSpacing="0.02"
            android:maxLines="1"
            android:paddingStart="@dimen/common_spacing"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/content"
            tools:text="https://m2.material.io/components/cards" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/like"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/big_spacing"
            android:contentDescription="@string/likes"
            android:paddingStart="@dimen/common_spacing"
            app:icon="@drawable/baseline_favorite_border_24"
            app:iconTint="?colorPrimary"
            app:layout_constraintEnd_toStartOf="@id/share"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/link"
            tools:text="10" />

        <ImageView
            android:id="@+id/share"
            android:layout_width="40dp"
            android:layout_height="48dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="@dimen/big_spacing"
            android:layout_marginEnd="4dp"
            android:contentDescription="@string/share"
            android:padding="12dp"
            app:layout_constraintEnd_toStartOf="@id/space_shareToPeople"
            app:layout_constraintStart_toEndOf="@id/like"
            app:layout_constraintTop_toBottomOf="@+id/link"
            app:srcCompat="@drawable/icon" />


        <Space
            android:id="@+id/space_shareToPeople"
            android:layout_width="@dimen/frameShareToPeople"
            android:layout_height="48dp"
            android:layout_marginTop="@dimen/big_spacing"
            app:layout_constraintEnd_toStartOf="@id/participated"
            app:layout_constraintStart_toEndOf="@id/share"
            app:layout_constraintTop_toBottomOf="@id/link" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/participated"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/big_spacing"
            android:layout_marginEnd="@dimen/common_spacing"
            android:contentDescription="@string/event"
            app:icon="@drawable/event"
            app:iconTint="?colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/space_shareToPeople"
            app:layout_constraintTop_toBottomOf="@+id/link"
            tools:text="2" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>